Fix retry icon on iOS when connection is down
Summary: Related: https://github.com/Khan/khan-mobile/commit/c8ae9ecbe0f39b99d592fe9fbfc47b6c08431bb8

Test Plan:
iPad
Airplane mode on
Load video
Make sure retry icon is visible
Make sure download/share icons are visible

Reviewers: alpert

Reviewed By: alpert

Differential Revision: http://phabricator.khanacademy.org/D7240

--- a/css/khan.css
+++ b/css/khan.css
@@ -417,8 +417,8 @@ html.no-sidebar body {
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
-.ui-icon {
-    background: none;
+.below-video .ui-icon {
+    background-color: transparent;
     border-radius: 0;
 }
 
